@@ -1,3 +1,9 @@
+2017-07-06  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* mcu/usb-usbip.c (hc_handle_data_urb): Fix the condition of the
+	end of transaction.
+	(read_data_transaction): Allow partial read by host.
+
 2017-07-05  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* example-fraucheky: New.
